# WOWc-DiscordApp

./: README.md  main.py  pyproject.toml
data/: query.py  useful_custom_functions.py
